# statistics_from_hh_ru_to_sql

./: .gitignore  README.md  main.py  pyproject.toml
src/: db_manager.py  headhunterapi.py  postgres_db.py
