[tool.poetry]
name = "hh-ru"
version = "0.1.0"
description = ""
authors = ["good_chemist <iolgasolovyeva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
